--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
               </div>
 
               <h1>
-                Hi, I’m <span style="background:linear-gradient(90deg, var(--accent), var(--accent2)); -webkit-background-clip:text; background-clip:text; color:transparent;">Student Name</span>
+                Hi, I’m <span style="background:linear-gradient(90deg, var(--accent), var(--accent2)); -webkit-background-clip:text; background-clip:text; color:transparent;">Sonali Das</span>
                 <br/>
                 <span style="color:rgba(255,255,255,.78); font-weight:800;">Building with Python & Machine Learning</span>
               </h1>
@@ -618,9 +618,9 @@
               </p>
 
               <div class="heroBtns">
-                <a class="btn primary" href="#projects"><i class="fa-solid fa-layer-group"></i> View Projects</a>
+                <a class="btn primary" href="https://github.com/sonalidas67009-bit/Ardent_AI_ML_Training"><i class="fa-solid fa-layer-group"></i> View Projects</a>
                 <a class="btn" href="#contact"><i class="fa-solid fa-paper-plane"></i> Contact</a>
-                <a class="btn" href="https://www.instagram.com/code_scholar_eu/" target="_blank" rel="noopener">
+                <a class="btn" href="https://www.instagram.com/" target="_blank" rel="noopener">
                   <i class="fa-brands fa-instagram"></i> Code_ScholarEU
                 </a>
               </div>
@@ -1012,10 +1012,10 @@
      * EDIT THESE LINKS *
      ********************/
     const LINKS = {
-      githubProfile: "https://github.com/your-username", // <-- replace
-      linkedin: "https://linkedin.com/in/your-profile",   // <-- replace (or remove)
-      project1Repo: "https://github.com/your-username/AI-ML-Workshop-2025", // <-- replace
-      project2Repo: "https://github.com/your-username/AI-ML-Workshop-2025", // <-- replace
+      githubProfile: "https://github.com/sonalidas67009-bit/Ardent_AI_ML_Training//, // <-- replace
+      linkedin: "https://linkedin.com/in/my-profile",   // <-- replace (or remove)
+      project1Repo: "https://github.com/my-username/AI-ML-Workshop-2025", // <-- replace
+      project2Repo: "https://github.com/m-username/AI-ML-Workshop-2025", // <-- replace
       project1Notebook: "#", // <-- add Colab/GitHub notebook link
       project2Notebook: "#", // <-- add Colab/GitHub notebook link
       email: "student@email.com" // <-- replace
@@ -1199,13 +1199,13 @@
      * Quick personalization helpers (optional)
      ********************/
     // Change "Student Name" quickly from query string: ?name=Rahul%20Das
-    // Change GitHub quickly: ?github=https://github.com/rahuldas
+    // Change GitHub quickly: ?github=https://github.com/Rahuldas
     const params = new URLSearchParams(location.search);
     const name = params.get("name");
     const github = params.get("github");
     if(name){
       document.querySelectorAll("h1 span").forEach(sp=>{
-        if(sp.textContent.trim() === "Student Name") sp.textContent = name;
+        if(sp.textContent.trim() === "Sonali Das") sp.textContent = name;
       });
     }
     if(github){
